--- a/frontend/src/Components/products/products.css
+++ b/frontend/src/Components/products/products.css
@@ -1,42 +1,15 @@
-.container-products-outer {
+.card-collection {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
   margin: 0 auto;
-  max-width: 1200px;
-  padding: 0 20px;
-}
-.container-products-outer .card-collection {
-  display: flex;
-  flex-wrap: wrap;
+  max-width: 1000px;
+  padding: 0 10px;
 }
 
-/* Start card-item-wrapper */
-.card-item-wrapper {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  margin: 0 0 20px;
-  position: relative;
-  width: 100%;
-}
-/* End card-item-wrapper */
-
-/* Start cart-item-badges */
-
-.card-item-badges {
-  position: absolute;
-  top: 15px;
-  left: 0;
-  width: 60px;
-  z-index: 1;
-}
-
-/* End cart-item-badges */
-
-.card-item .card.item-toolbox {
-  position: absolute;
-  top: 10px;
-  right: 10px;
-  z-index: 2;
+.card-item {
+  display: block;
+  background-color: #fff;
+  width: 300px;
+  height: 500px;
+  margin: 2px;
 }
