--- a/frontend/src/Components/products/add-card-item/addProductForm.css
+++ b/frontend/src/Components/products/add-card-item/addProductForm.css
@@ -8,6 +8,10 @@
   background-color: #f5f5f5;
 }
 
+.container-add-product-inner h1 {
+  text-align: center;
+  margin-bottom: 20px;
+}
 .container-add-product-outer .container-add-product-inner {
   display: block;
   background-color: #fff;
