--- a/frontend/src/Components/header/header.css
+++ b/frontend/src/Components/header/header.css
@@ -75,3 +75,13 @@ body {
 .bun-venit:hover ul {
   display: block;
 }
+
+.btn-logout {
+  background-color: #fff;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  font-size: 1rem;
+  font-weight: 500;
+  color: #000;
+}
