--- a/frontend/src/Components/products/products.css
+++ b/frontend/src/Components/products/products.css
@@ -1,10 +1,11 @@
-/* .card-collection {
-  display: flex;
-  flex-wrap: wrap;
+.container-products-outer {
+  display: block;
+  width: 1520px;
+  height: 100%;
   margin: 0 auto;
-  max-width: 1000px;
   padding: 0 10px;
-} */
+  padding-top: 10px;
+}
 
 .card-item {
   display: block;
@@ -20,39 +21,6 @@
   margin: 0 auto;
   max-width: 350px;
   padding: 0 10px;
-}
-
-.pagination {
-  display: block;
-  flex-wrap: wrap;
-  margin: 0 auto;
-  max-width: 350px;
-  padding: 0 10px;
-}
-
-.pagination-buttons {
-  display: flex;
-  flex-wrap: wrap;
-  margin: 0 auto;
-  width: fit-content;
-  padding: 0 10px;
-}
-
-.pagination-buttons button {
-  display: inline-block;
-  text-align: center;
-  background-color: #fff;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  color: #000;
-  cursor: pointer;
-  font-size: 16px;
-  font-weight: 600;
-  height: 40px;
-  margin: 0 5px;
-  outline: none;
-  padding: 0 10px;
-  width: fit-content;
 }
 
 .container-filtere {
@@ -85,30 +53,4 @@
   padding: 0.2rem;
   width: 100px;
   text-align: center;
-}
-
-.limit-container button {
-  border: 1px solid #ccc;
-  background-color: #fff;
-  padding: 0.2rem;
-  width: 150px;
-  text-align: center;
-  cursor: pointer;
-}
-
-.dropdown-menu {
-  background-color: #fff;
-  border: 1px solid #ccc;
-  border-top: none;
-}
-
-.listing-sorting-dropdown ul {
-  text-align: center;
-  list-style: none;
-  cursor: pointer;
-}
-
-.listing-sorting-dropdown ul li a {
-  text-decoration: none;
-  color: #000;
 }
