--- a/frontend/src/Components/UI/filtersAndProduct/productsv2.css
+++ b/frontend/src/Components/UI/filtersAndProduct/productsv2.css
@@ -6,7 +6,8 @@
   padding-top: 1rem;
 }
 .filter {
-  display: inline-block;
+  display: block;
+  float: left;
   width: 300px;
   padding-right: 15px;
 }
@@ -154,16 +155,17 @@
 
 .card-title {
   font-size: 1rem;
+  height: 50px;
   font-weight: 600;
   color: #005eb8;
   text-decoration: none;
   margin-bottom: 0.5rem;
 }
 .card-rating {
-  display: inline-block;
-  width: 100%;
-  height: 20px;
-  padding-top: 10px;
+  display: block;
+  height: 50px;
+  padding: 10px 0;
+  margin-bottom: 0.5rem;
 }
 
 .card-price {
