--- a/frontend/src/Components/UI/sideBarFilters/modelFilter/modelfilter.css
+++ b/frontend/src/Components/UI/sideBarFilters/modelFilter/modelfilter.css
@@ -11,7 +11,7 @@
   padding: 10px 0;
 }
 
-.model-title .filter-head::after {
+/* .model-title .filter-head::after {
   border-style: solid;
   border-width: 0.2em 0.2em 0 0;
   content: "";
@@ -25,4 +25,4 @@
   vertical-align: top;
   width: 0.45em;
   margin-left: 12rem;
-}
+} */
