--- a/frontend/src/Components/UI/filtersAndProduct/productsv2.css
+++ b/frontend/src/Components/UI/filtersAndProduct/productsv2.css
@@ -86,6 +86,12 @@
   border-bottom: 1px solid #e5e5e5;
 }
 
+.card-link {
+  color: black;
+  text-decoration: none;
+  font-weight: 500;
+}
+
 .products-container {
   display: block;
   float: right;
@@ -163,7 +169,7 @@
   text-decoration: none;
   margin-bottom: 0.5rem;
 }
-.card-rating {
+.single-card-rating-container {
   display: block;
   height: 50px;
   padding: 10px 0;
