--- a/frontend/src/Components/UI/category/allCategories/allCategories.css
+++ b/frontend/src/Components/UI/category/allCategories/allCategories.css
@@ -1,8 +1,7 @@
-.test-title-container {
-  background-color: #fff;
+.filters-v2-container {
   margin: 10px 0;
 }
-.test-title-container .filter-head {
+.filters-v2-container .filter-head {
   color: #000;
   text-decoration: none;
   font-weight: 700;
@@ -33,6 +32,7 @@
 
 .filter-body {
   padding: 0 10px;
+  font-size: 14px;
 }
 
 .filter-inner {
@@ -44,7 +44,7 @@
 }
 
 .scrollable {
-  max-height: 227px;
+  max-height: 210px;
   overflow-y: auto;
 }
 
@@ -57,8 +57,9 @@
 }
 
 .scrollable::-webkit-scrollbar-thumb {
-  background: rgba(0, 0, 0, 0.3);
+  background: rgba(0, 0, 0, 0.2);
   border-radius: 35px;
+  border: 1px solid white;
 }
 
 .scrollable::-webkit-scrollbar-thumb:hover {
@@ -68,3 +69,25 @@
 .star-brand-text {
   padding: 0 5px;
 }
+
+/* Start brand Category */
+
+.brand-v2-container {
+  margin: 10px 0;
+  background-color: #fff;
+}
+
+/* End brand Category */
+
+/* Start models Category */
+
+.model-v2-container {
+  margin: 10px 0;
+  background-color: #fff;
+}
+
+.filter-body a {
+  display: block;
+}
+
+/* End brand Category */
