--- a/frontend/src/Components/UI/filtersAndProduct/limit.css
+++ b/frontend/src/Components/UI/filtersAndProduct/limit.css
@@ -1,6 +1,6 @@
 .listing-panel-container {
   display: block;
-  float: right;
+  float: left;
   width: 1198px;
   height: 100%;
   background-color: #fff;
@@ -56,6 +56,11 @@
   outline: none;
   padding: 0 10px;
   width: fit-content;
+}
+
+.listing-page-title {
+  font-size: 16px;
+  font-weight: 400;
 }
 
 .title-phrasing h4 {
@@ -139,11 +144,15 @@
 }
 
 .sort-control-item {
+  font-size: 14px;
+  font-weight: 400;
   padding-right: 10px;
 }
 
 .limit-control-item {
-  padding: 0 20px;
+  font-size: 14px;
+  font-weight: 400;
+  padding: 0 10px 0 10px;
 }
 
 .limit-control-btn-dropdown,
@@ -188,4 +197,38 @@
   font-weight: 100;
   padding: 5px 12px;
   text-decoration: none;
+}
+
+.sort-control-btn-dropdown {
+  position: relative;
+}
+
+.sort-control-btn-dropdown span:after {
+  content: "";
+  position: absolute;
+  left: 140px;
+  top: 50%;
+  transform: translateY(-50%);
+  width: 0;
+  height: 0;
+  border-left: 5px solid transparent;
+  border-right: 5px solid transparent;
+  border-top: 5px solid #000;
+}
+
+.limit-control-btn-dropdown {
+  position: relative;
+}
+
+.limit-control-btn-dropdown span:after {
+  content: "";
+  position: absolute;
+  left: 140px;
+  top: 50%;
+  transform: translateY(-50%);
+  width: 0;
+  height: 0;
+  border-left: 5px solid transparent;
+  border-right: 5px solid transparent;
+  border-top: 5px solid #000;
 }
