--- a/frontend/src/Components/UI/add-to-cart-icon/addToCartIcon.css
+++ b/frontend/src/Components/UI/add-to-cart-icon/addToCartIcon.css
@@ -1,21 +1,23 @@
-.add-to-cart-icon {
+/* .add-to-cart-icon {
   position: relative;
   width: fit-content;
   float: left;
-}
+} */
+
 .add-to-cart-icon span {
   position: absolute;
-  right: 0;
-  top: -5px;
+  left: 12px;
+  bottom: 15px;
   font-size: 14px;
   background: linear-gradient(to right, #cf3f50, #fe2d34);
   padding: 4px;
   border-radius: 50%;
   color: white;
   line-height: 10px;
+  z-index: 1;
 }
 
-.add-to-cart-icon::after {
+/* .add-to-cart-icon::after {
   position: absolute;
   font-family: "Bootstrap-icons";
   content: "\F243";
@@ -23,4 +25,4 @@
   padding: 5px;
   top: -10px;
   left: -10px;
-}
+} */
