--- a/frontend/src/Components/UI/add-to-cart-modal/addToCartModal.css
+++ b/frontend/src/Components/UI/add-to-cart-modal/addToCartModal.css
@@ -1,25 +1,18 @@
-.connector {
-  display: block;
-  position: absolute;
-  width: 100%;
-  height: 15px;
-  z-index: 1;
-}
-
 .add-to-cart-modal-container {
-  display: block;
+  display: none;
   position: absolute;
-  top: 15px;
+  top: 46px;
   left: -90px;
   z-index: 1;
-  border: 1px solid #e5e5e5;
   border-radius: 10px;
+  /* padding-top: 20px; */
 }
 
 .add-to-cart-modal-inner {
   background-color: white;
   text-align: center;
   border-radius: 10px;
+  border: 1px solid #e5e5e5;
 }
 
 .add-to-cart-modal-title {
@@ -46,25 +39,63 @@
   font-size: 11px;
   justify-content: center;
   align-items: center;
+  line-height: 20px;
+  width: 100%;
+}
+
+.in .inner {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+}
+.in .footer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 20%;
+  position: relative;
 }
 
 .add-to-cart-modal-body .in:hover {
   background-color: #f8f8f8;
   cursor: pointer;
 }
+
+.add-to-cart-modal-body .modal-link {
+  position: relative;
+  padding: 0;
+}
 .add-to-cart-modal-description {
-  width: 120px;
+  width: 130px;
 }
 .add-to-cart-modal-quantity {
-  width: 30px;
+  width: 50px;
 }
 
 .add-to-cart-modal-amount {
   font-weight: bold;
   color: #005eb8;
+  width: 20%;
 }
 .add-to-cart-modal-close {
-  width: 30px;
+  position: absolute;
+  top: 1px;
+  left: 270px;
+}
+.add-to-cart-modal-close:hover {
+  background-color: #ffffff;
+  position: absolute;
+  top: 1px;
+  left: 270px;
+}
+
+.add-to-cart-modal-close span {
+  display: block;
+  width: 100%;
+  height: 100%;
 }
 
 .add-to-cart-modal-body::-webkit-scrollbar {
@@ -117,4 +148,54 @@
   font-weight: bold;
   font-size: 85%;
   border: 0;
+}
+
+.modal-empty-cart {
+  padding: 10px 0;
+  font-size: 18px;
+  color: #888;
+}
+
+.add-to-cart-modal-cart-inner {
+  padding: 5px;
+}
+.add-to-cart-modal-cart-inner .cart-btn {
+  display: block;
+  width: 100%;
+  color: white;
+  background: #3985e0;
+  background: -webkit-linear-gradient(left, #4a60c1 10%, #3985e0);
+  background: linear-gradient(to right, #4a60c1 10%, #3985e0);
+  border-radius: 5px;
+  line-height: 14px;
+  padding-top: 8px;
+  padding-bottom: 8px;
+  border-width: 0;
+  text-decoration: none;
+}
+
+.add-to-cart-modal-quantity .group-info {
+  display: flex;
+  position: relative;
+  gap: 2px;
+  z-index: 4;
+}
+
+.add-to-cart-modal-quantity .group-info div {
+  font-size: 12px;
+}
+.add-to-cart-modal-quantity .group-info button {
+  position: relative;
+  z-index: 4;
+  font-size: 12px;
+  width: 15px;
+  height: 15px;
+}
+.add-to-cart-modal-quantity .group-info button:hover {
+  background-color: white;
+  position: relative;
+  z-index: 4;
+  font-size: 12px;
+  width: 15px;
+  height: 15px;
 }
