--- a/frontend/src/Components/products/cards/cards.css
+++ b/frontend/src/Components/products/cards/cards.css
@@ -1,8 +1,3 @@
-.cards-container-outer {
-  display: flex;
-  flex-flow: wrap;
-}
-
 .card-collection {
   display: flex;
   flex-wrap: wrap;
@@ -10,7 +5,6 @@
 
 .card-v2 {
   width: 100%;
-  min-height: 395px;
   background-color: #fff;
   margin: 5px;
   border-radius: 5px;
@@ -96,12 +90,13 @@
   font-size: 1px;
 }
 .product-new-price {
-  font-size: 16px;
+  font-size: 18px;
   margin: 0;
-  font-weight: 900;
+
   white-space: nowrap;
-  font-family: "Open Sans", Helvetica, sans-serif;
+  /* font-family: "Open Sans", Helvetica, sans-serif; */
   color: #ef2809;
+  font-weight: 700;
 }
 .product-new-price span {
   padding: 0 5px;
@@ -111,8 +106,27 @@
   height: 32px;
 }
 
+.card-estimate-placeholder .danger-stock {
+  color: #ef2809;
+}
+.card-estimate-placeholder .warning-stock {
+  color: #ef2809;
+}
+.add-to-cart-item .add-to-cart-close {
+  display: block;
+  cursor: pointer;
+  float: right;
+}
 /* Start Mobile */
-@media (min-width: 500px) {
+
+@media (min-width: 320px) {
+  .main-container-body {
+    display: block;
+    width: 100%;
+    height: 100%;
+    margin: auto;
+    padding-top: 1rem;
+  }
   .container-products-outer {
     width: 500px;
   }
@@ -121,7 +135,8 @@
   }
 
   .card-collection .main-container-body .listing-panel-container {
-    display: none;
+    display: block;
+    width: 100%;
   }
 
   .page-container {
@@ -134,14 +149,96 @@
   .card-collection {
     margin: auto;
   }
+  .tip-afisare-head {
+    display: block;
+  }
+
+  .limit-control-item {
+    width: 50px;
+  }
 
   .cards-container-outer .card-collection {
     display: block;
     width: 395px;
   }
-  .card-collection .card-item {
+  .card-collection.card-v2-grid .card-item {
     width: calc(100% / 1);
     height: 502px;
+  }
+
+  .card-collection .main-container-body .listing-panel-container {
+    display: block;
+    width: 475px;
+  }
+
+  .listing-panel-footer {
+    height: 100%;
+  }
+
+  .sort-control-group .control-group {
+    display: flex;
+    flex-direction: column;
+  }
+}
+@media (min-width: 500px) {
+  .main-container-body {
+    display: block;
+    width: 100%;
+    height: 100%;
+    margin: auto;
+    padding-top: 1rem;
+  }
+  .container-products-outer {
+    width: 500px;
+  }
+  .container-products-outer .filter {
+    display: none;
+  }
+
+  .card-collection .main-container-body .listing-panel-container {
+    display: block;
+    width: 100%;
+  }
+
+  .page-container {
+    display: block;
+    float: none;
+    width: 475px;
+    height: fit-content;
+  }
+
+  .card-collection {
+    margin: auto;
+  }
+  .tip-afisare-head {
+    display: block;
+  }
+
+  .limit-control-item {
+    width: 50px;
+  }
+
+  .cards-container-outer .card-collection {
+    display: block;
+    width: 395px;
+  }
+  .card-collection.card-v2-grid .card-item {
+    width: calc(100% / 1);
+    height: 502px;
+  }
+
+  .card-collection .main-container-body .listing-panel-container {
+    display: block;
+    width: 475px;
+  }
+
+  .listing-panel-footer {
+    height: 100%;
+  }
+
+  .sort-control-group .control-group {
+    display: flex;
+    flex-direction: column;
   }
 }
 @media (min-width: 600px) {
@@ -151,6 +248,13 @@
   .card-collection {
     margin: -5px -5px -5px;
     width: 600px;
+  }
+  .card-collection .main-container-body .listing-panel-container {
+    display: block;
+    width: 99%;
+  }
+  .tip-afisare-head {
+    display: block;
   }
 
   .page-container {
@@ -162,10 +266,18 @@
   .cards-container-outer .card-collection {
     display: flex;
     width: 100%;
+    justify-content: center;
   }
-  .card-collection .card-item {
+  .card-collection.card-v2-grid .card-item {
     width: calc(100% / 2);
     height: 502px;
+  }
+  .products-container-v2 {
+    width: 600px;
+  }
+  .sort-control-group .control-group {
+    display: flex;
+    flex-direction: column;
   }
 }
 @media (min-width: 700px) {
@@ -179,16 +291,28 @@
   .page-container {
     display: block;
     float: none;
-    width: fit-content;
+    width: 100%;
     height: fit-content;
+  }
+  .products-container-v2 {
+    width: 100%;
+  }
+
+  .tip-afisare-head {
+    display: block;
   }
   .cards-container-outer .card-collection {
     display: flex;
     width: 100%;
   }
-  .card-collection .card-item {
+  .card-collection.card-v2-grid .card-item {
     width: calc(100% / 2);
     height: 502px;
+  }
+
+  .sort-control-group .control-group {
+    display: flex;
+    flex-direction: row;
   }
 }
 
@@ -200,17 +324,20 @@
     margin: -5px -5px -5px;
     width: 768px;
   }
+  .tip-afisare-head {
+    display: block;
+  }
   .page-container {
     display: block;
     float: none;
-    width: fit-content;
+    width: 768px;
     height: fit-content;
   }
   .cards-container-outer .card-collection {
     display: flex;
     width: 100%;
   }
-  .card-collection .card-item {
+  .card-collection.card-v2-grid .card-item {
     width: calc(100% / 2);
     height: 502px;
   }
@@ -220,6 +347,14 @@
   .container-products-outer {
     width: 868px;
   }
+  .page-container,
+  .products-container-v2 {
+    width: 868px;
+  }
+
+  .listing-panel-container {
+    display: block;
+  }
   .card-collection {
     margin: -5px -5px -5px;
     width: 868px;
@@ -227,14 +362,14 @@
   .page-container {
     display: block;
     float: none;
-    width: fit-content;
+    width: 100%;
     height: fit-content;
   }
   .cards-container-outer .card-collection {
     display: flex;
     width: 100%;
   }
-  .card-collection .card-item {
+  .card-collection.card-v2-grid .card-item {
     width: calc(100% / 3);
     height: 502px;
   }
@@ -246,13 +381,17 @@
     margin: auto;
     width: 992px;
   }
+
+  .listing-panel-container {
+    display: block;
+  }
   .container-products-outer .filter {
     display: block;
   }
 
   .card-collection .main-container-body .listing-panel-container {
     display: block;
-    width: 100%;
+    width: 99%;
   }
 
   .page-container {
@@ -272,14 +411,25 @@
   .cards-container-outer {
     display: block;
   }
+  .tip-afisare-head {
+    display: none;
+  }
 
   .cards-container-outer .card-collection {
     display: flex;
     width: 100%;
+    justify-content: start;
   }
-  .card-collection .card-item {
+  .card-collection.card-v2-grid .card-item {
     width: calc(100% / 2);
     height: 502px;
+  }
+  .sort-control-group .control-group {
+    display: flex;
+    flex-direction: row;
+  }
+  .products-container-v2 {
+    width: 100%;
   }
 }
 
@@ -292,7 +442,10 @@
   .card-collection {
     width: 880px;
   }
-  .card-collection .card-item {
+  .tip-afisare-head {
+    display: block;
+  }
+  .card-collection.card-v2-grid .card-item {
     width: calc(100% / 3);
     height: 502px;
   }
@@ -306,7 +459,10 @@
   .card-collection {
     width: 1150px;
   }
-  .card-collection .card-item {
+  .products-container-v2 {
+    width: 100%;
+  }
+  .card-collection.card-v2-grid .card-item {
     width: calc(100% / 4);
     height: 502px;
   }
@@ -320,9 +476,12 @@
   .card-collection {
     width: 1150px;
   }
-  .card-collection .card-item {
+  .products-container-v2 {
+    width: 100%;
+  }
+  .card-collection.card-v2-grid .card-item {
     width: calc(100% / 4);
-    height: 502px;
+    /* height: 502px; */
   }
 }
 
